Add: 迁移到新的Github仓库

--- a/gia-app/src/main/resources/templates/403.html
+++ b/gia-app/src/main/resources/templates/403.html
@@ -7,7 +7,7 @@
     <meta name="_csrf_header" th:content="${_csrf.headerName}"
           th:if="${_csrf}"/>
     <meta name="_csrf" th:content="${_csrf.token}" th:if="${_csrf}"/>
-    <link rel="shortcut icon"  href="../static/images/title.jpg" th:href="@{images/title.jpg}">
+    <link rel="shortcut icon"  href="../static/images/title.png" th:href="@{images/title.png}">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <title>403</title>
 </head>
