--- a/gia-app/src/main/resources/templates/admin.html
+++ b/gia-app/src/main/resources/templates/admin.html
@@ -9,7 +9,7 @@
     <meta name="_csrf_header" th:content="${_csrf.headerName}"
           th:if="${_csrf}" />
     <meta name="_csrf" th:content="${_csrf.token}" th:if="${_csrf}" />
-    <link rel="shortcut icon"  href="../static/images/title.jpg" th:href="@{images/title.jpg}">
+    <link rel="shortcut icon"  href="../static/images/title.png" th:href="@{images/title.png}">
     <title>Diamond GIA统一认证平台</title>
     <!--/*/<th:block th:include="layout/include::include">/*/-->
     <!--/*/</th:block>/*/-->
