--- a/gia-app/src/main/resources/templates/changePassword.html
+++ b/gia-app/src/main/resources/templates/changePassword.html
@@ -3,7 +3,7 @@
 <head>
     <title>Diamond GIA统一认证修改密码</title>
     <meta charset="UTF-8"/>
-    <link rel="shortcut icon"  href="../static/images/title.jpg" th:href="@{images/title.jpg}">
+    <link rel="shortcut icon"  href="../static/images/title.png" th:href="@{images/title.png}">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="_csrf_parameter" th:content="${_csrf.parameterName}"
           th:if="${_csrf}" />
