--- a/gia-app/src/main/resources/templates/index.html
+++ b/gia-app/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Diamond GIA统一认证</title>
     <meta charset="UTF-8"/>
-    <link rel="shortcut icon"  href="../static/images/title.jpg" th:href="@{images/title.jpg}">
+    <link rel="shortcut icon"  href="../static/images/title.png" th:href="@{images/title.png}">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/bootstrap-table/1.11.1/bootstrap-table.min.css" rel="stylesheet">
@@ -111,7 +111,6 @@
     <!--footer section start-->
     <footer class="sticky-footer">
         <div class="container">
-            <div class="text-center">v2.3.9</div></br>
             <div class="text-center">2018-2021 @hoioy.com 版权所有</div></br>
         </div>
     </footer>
