--- a/gia-app/src/main/resources/templates/layout/include.html
+++ b/gia-app/src/main/resources/templates/layout/include.html
@@ -75,7 +75,7 @@
     <!--custom-->
     <script src="js/scripts.js" th:src="@{/js/scripts.js}"></script>
     <script src="js/util.js" th:src="@{js/util.js}"></script>
-    <script src="js/tdf-boostrap-tree.js" th:src="@{js/tdf-boostrap-tree.js}"></script>
+    <script src="js/diamond-boostrap-tree.js" th:src="@{js/diamond-boostrap-tree.js}"></script>
 </div>
 </body>
 </html>
