--- a/gia-app/src/main/resources/templates/login.html
+++ b/gia-app/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <title>Diamond GIA统一认证</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="shortcut icon"  href="../static/images/title.jpg" th:href="@{images/title.jpg}">
+    <link rel="shortcut icon"  href="../static/images/title.png" th:href="@{images/title.png}">
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -74,8 +74,8 @@
 </section>
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-        <div class="text-center">Diamond GIA统一认证v2.1.9</div>
-        <div class="text-center">2018-2019 &copy;hoioy.com 版权所有</div>
+        <div class="text-center">Diamond GIA统一认证</div>
+        <div class="text-center">2018-2021 &copy;hoioy.com 版权所有</div>
     </div>
 </nav>
 </body>
