--- a/gia-app/src/main/resources/templates/auth.html
+++ b/gia-app/src/main/resources/templates/auth.html
@@ -4,7 +4,7 @@
   <title>Diamond GIA统一认证</title>
   <meta charset="UTF-8"></meta>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon"  href="../static/images/title.jpg" th:href="@{images/title.jpg}">
+  <link rel="shortcut icon"  href="../static/images/title.png" th:href="@{images/title.png}">
   <link href="https://cdn.bootcss.com/twitter-bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 </head>
