--- a/gia-app/src/main/resources/templates/error.html
+++ b/gia-app/src/main/resources/templates/error.html
@@ -3,7 +3,7 @@
 <head>
     <title>Error</title>
     <meta charset="UTF-8"></meta>
-    <link rel="shortcut icon"  href="../static/images/title.jpg" th:href="@{images/title.jpg}">
+    <link rel="shortcut icon"  href="../static/images/title.png" th:href="@{images/title.png}">
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
