Add: 迁移到新的Github仓库

--- a/gia-app/src/main/resources/templates/index.html
+++ b/gia-app/src/main/resources/templates/index.html
@@ -86,7 +86,7 @@
                                 <a th:href="${client.mainHost}" th:title="${client.customSubName}"
                                    target="_blank">
                                     <img class="lazy" th:src="${client.icon}" alt="应用图标，可使用admin账户登录设置"
-                                         onerror="this.src='http://tech.hoioy.com/upload/9f569dfd274745e4a12ffcf4c5983e2e.jpg';
+                                         onerror="this.src='http://www.hoioy.com/upload/2021/05/dimaondLogo100-3f4d7864c22f44559f10885d12d855a5.png';
                                      this.onerror=null" width="100" height="100" />
                                 </a>
                                 <h3>
